--- a/src/Modal.css
+++ b/src/Modal.css
@@ -1,11 +1,12 @@
 .Modal {
   position: absolute;
+  left: var(--left, 25%);
+  top: var(--top, 25%);
+  /* Don't change any class properties above this comment */
+
   height: 50%;
   width: 50%;
   padding: 2rem;
-
-  left: var(--left, 25%);
-  top: var(--top, 25%);
 
   background-color: navy;
   box-shadow: 1px 1px 3px 1px rgba(0, 0, 0, 0.4);
